# Price_checker

./: .gitignore  README.md
my_app/: manage.py  pyproject.toml
my_app/items/: admin.py  models.py  serializers.py  urls.py  views.py
my_app/price_checker/: asgi.py  settings.py  urls.py  wsgi.py
my_app/scraper/: models.py
my_app/scraper/shops/auchan/: auchan.py  auchan_info.py  auchan_locators.py  auchan_model.py
my_app/scraper/shops/citrus/: citrus.py  citrus_info.py  citrus_locators.py  citrus_model.py
my_app/scraper/shops/ktc/: ktc.py  ktc_info.py  ktc_locators.py  ktc_model.py
my_app/users/: models.py  serializers.py  views.py
my_app/utillities/: utillities.py
my_app/validators/: image_validator.py
